
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="narek.example.com.yandex_weather_app.ui.weather.cities_nested.CitiesNestedFragment">


    <EditText
        android:id="@+id/find_city_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_city"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:imeOptions="flagNoExtractUi"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view_cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_below="@+id/find_city_ed"
        android:layout_centerHorizontal="true">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>
