<resources>
    <string name="app_name">Weather</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="weather">Weather</string>
    <string name="header_image">Header image</string>
    <string name="about_text">App for weather.Created for training purposes</string>

    <string name="about_extra">Feedback՝ \n\nEmail: narave05@gmail.com \nTel: +79260566244 \n\nEmail: chog0@yandex.ru
    </string>
    <string name="pressure">PRESSURE</string>
    <string name="wind">WIND</string>
    <string name="humidity">HUMIDITY</string>
    <string name="m_s">m/s</string>
    <string name="h_pa">hPa</string>
    <string name="Interval_is">Update interval is %d hours</string>
    <string name="data_not_updated">Data not updated</string>
    <string name="abut_us_title">Abut us</string>
    <string name="settings_title">Settings</string>
    <string name="weather_title">Weather</string>
    <string name="google_places_api_key" translatable="false">AIzaSyA1uUQBr0fdSgcUTFBhbfF4lWd8cO0ADyU</string>
    <string name="find_city">Find city</string>
    <string name="hi">Hi, Human!</string>
    <string name="add_city">Please, add your city</string>
    <string name="cancel">Cancel</string>
    <string name="cities">Cities</string>
</resources>
