<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_margin="20dp"
            android:id="@+id/interval"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/interval_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="9"
            android:progress="1"
            android:layout_margin="10dp"
            android:layout_gravity="start|bottom" />

    </android.support.v7.widget.CardView>

</LinearLayout>
