<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:src="@drawable/min_drawer_header_icon"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="start"
            android:text="@string/about_text"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autoLink="phone|web"
            android:text="@string/about_extra"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>